--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datasets>=4.1.1",
     "hydra-core>=1.3.2",
+    "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
@@ -16,3 +18,10 @@ dependencies = [
 vllm = [
     "vllm>=0.10.2",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/intention_jailbreak"]
