--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
+    "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
     "transformers>=4.57.0",
