--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bitsandbytes>=0.48.1",
     "datasets>=4.1.1",
     "hydra-core>=1.3.2",
     "jupyter>=1.1.1",
@@ -12,7 +13,9 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
+    "tqdm>=4.67.1",
     "transformers>=4.57.0",
+    "wandb>=0.22.2",
 ]
 
 [project.optional-dependencies]
