--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -24,8 +24,8 @@ dataset:
 training:
   output_dir: "models/modernbert-classifier"
   num_train_epochs: 1
-  per_device_train_batch_size: 256
-  per_device_eval_batch_size: 256
+  per_device_train_batch_size: 64
+  per_device_eval_batch_size: 64
   learning_rate: 1.0e-4
   
   # Optimization
@@ -38,7 +38,7 @@ training:
   eval_steps: 0.2  # Every 20% of epoch
   save_strategy: "epoch"
   save_total_limit: 2
-  load_best_model_at_end: true
+  load_best_model_at_end: false
   metric_for_best_model: "f1"
   greater_is_better: true
   
