--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.10.1",
     "bitsandbytes>=0.48.1",
     "datasets>=4.1.1",
     "hydra-core>=1.3.2",
