--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -19,13 +19,14 @@ dataset:
   label_column: "prompt_harm_label"
   text_column: "prompt"
   positive_label: "harmful"
+  num_proc: 8  # Number of workers for tokenization
 
 # Training Arguments (passed directly to TrainingArguments)
 training:
   output_dir: "models/modernbert-classifier"
   num_train_epochs: 1
-  per_device_train_batch_size: 64
-  per_device_eval_batch_size: 64
+  per_device_train_batch_size: 48
+  per_device_eval_batch_size: 48
   learning_rate: 1.0e-4
   
   # Optimization
@@ -45,7 +46,14 @@ training:
   # Logging
   logging_dir: "logs/tensorboard"
   logging_steps: 10
+  logging_first_step: false
+  disable_tqdm: false
   report_to: "wandb"
+  log_level: "warning"
+  
+  # DataLoader
+  dataloader_num_workers: 8
+  dataloader_pin_memory: true
   
   # Misc
   remove_unused_columns: true
