--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -40,14 +40,10 @@ training:
   save_strategy: "epoch"
   save_total_limit: 2
   load_best_model_at_end: false
-  metric_for_best_model: "f1"
-  greater_is_better: true
   
   # Logging
-  logging_dir: "logs/tensorboard"
+  logging_dir: "logs"
   logging_steps: 10
-  logging_first_step: false
-  disable_tqdm: false
   report_to: "wandb"
   log_level: "warning"
   
