--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -6,7 +6,7 @@ seed: &seed 42
 # Model Configuration
 model:
   name: "answerdotai/ModernBERT-base"
-  max_length: 512
+  max_length: 256
   num_labels: 2
   problem_type: "single_label_classification"
 
@@ -24,10 +24,12 @@ dataset:
 # Training Arguments (passed directly to TrainingArguments)
 training:
   output_dir: "models/modernbert-classifier"
-  num_train_epochs: 1
+  num_train_epochs: 3
   per_device_train_batch_size: 48
   per_device_eval_batch_size: 48
   learning_rate: 1.0e-4
+  lr_scheduler_type: "cosine"
+  warmup_ratio: 0.1
   
   # Optimization
   optim: "adamw_bnb_8bit"
