--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ dependencies = [
     "hydra-core>=1.3.2",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
+    "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.57.0",
     "wandb>=0.22.2",
+    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl"
 ]
 
 [project.optional-dependencies]
@@ -30,3 +32,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/intention_jailbreak"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
