--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "datasets>=4.1.1",
     "hydra-core>=1.3.2",
     "jupyter>=1.1.1",
+    "langdetect>=1.0.9",
     "matplotlib>=3.10.6",
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.2",
@@ -18,7 +19,6 @@ dependencies = [
     "tqdm>=4.67.1",
     "transformers>=4.57.0",
     "wandb>=0.22.2",
-    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl"
 ]
 
 [project.optional-dependencies]
