--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -20,18 +20,20 @@ dataset:
   text_column: "prompt"
   positive_label: "harmful"
   num_proc: 8  # Number of workers for tokenization
+  filter_english: true  # Filter to keep only English texts (uses fast-langdetect with caching)
+  language_cache_dir: "data/cache"  # Directory for language detection cache
   use_label_weights: true  # Weight by harm label frequency (harmful vs unharmful)
   use_subcategory_weights: false  # Weight by subcategory frequency
   class_weight_column: "subcategory"  # Column to compute subcategory weights from
 
 ensemble:
-  enabled: True
+  enabled: False
   num_models: 3
 
 # Training Arguments (passed directly to TrainingArguments)
 training:
   output_dir: "models/modernbert-ensemble"
-  num_train_epochs: 1
+  num_train_epochs: 3
   per_device_train_batch_size: 48
   per_device_eval_batch_size: 48
   learning_rate: 1e-4
