--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ dependencies = [
     "accelerate>=1.10.1",
     "bitsandbytes>=0.48.1",
     "datasets>=4.1.1",
+    "fast-langdetect>=1.0.0",
     "hydra-core>=1.3.2",
     "jupyter>=1.1.1",
-    "langdetect>=1.0.9",
     "matplotlib>=3.10.6",
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.2",
