Added calibration plot code and ensemble evaluation

--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -27,7 +27,7 @@ dataset:
   class_weight_column: "subcategory"  # Column to compute subcategory weights from
 
 ensemble:
-  enabled: False
+  enabled: True
   num_models: 3
 
 # Training Arguments (passed directly to TrainingArguments)
