--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "datasets>=4.1.1",
     "fast-langdetect>=1.0.0",
     "hydra-core>=1.3.2",
+    "ipykernel>=6.30.1",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
     "python-dotenv>=1.1.1",
